2011-05-31  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: remove unneeded if(var) test in
	  xml_optionstr(), the variable tested was never NULL

2011-05-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/list_dir.c: fix add_dir_list_item.

2011-05-27 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec.src: replace enable-as-needed rpm macro
	   with enable_as_needed.

2011-05-24 Dan Locks <dwlocks@zmanda.com>
	*  packaging/deb/rules: use --enable-as-needed
	*  packaging/rpm/amanda.spec.src: use --enable-as-needed except on
	   sles9, where ld does not have the --as-needed flag.

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/debug.c: debug_unlink_old(): the realloc was meant to
	  happen each time the loop was entered and dbfilename was not NULL, fix

2011-05-24  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Parse and filter stdout/stderr of
	  commands.

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/conffile.c: the prototype for str_keyword() was defined
	  twice, remove one definition

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/krb5-security.c: use cpp's #error to signal the lack of
	  atexit()

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/genversion.c: use do { ... } while(0) to #define
	  the startline() macro

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/cmdline.c: [GLib] rewrite
	  cmdline_format_dumpspec_components() using a GPtrArray and
	  g_strjoinv()

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* client-src/sendbackup-dump.c, common-src/debug.c,
	  common-src/krb5-security.c, common-src/security-util.c,
	  recover-src/amrecover.c, recover-src/extract_list.c,
	  server-src/dumper.c, server-src/planner.c: use newstralloc() where
	  possible instead of /^newvstrallocf?/()

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>